# cast

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/cast/: __init__.py  cli.py  interceptor.py  models.py  recorder.py  store.py
src/cast/interceptors/: __init__.py  base.py
src/cast/interceptors/litellm/: __init__.py  completion.py
src/cast/interceptors/openai/: __init__.py  completions.py  responses.py
tests/: conftest.py  test_interceptors.py  test_recorder.py  test_store.py
