[tool.poetry]
name = "cast-agent"
version = "0.1.0"
description = "record. replay. rewind. time-travel debugger for AI agents."
authors = ["suryanox"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cast", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
rich = "^13.0"
pydantic = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
openai = "^1.0"
anthropic = "^0.40"

[tool.poetry.scripts]
cast = "cast.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"