[tool.poetry]
name = "cast-agent"
version = "0.1.0"
description = "record, replay, rewind. time-travel debugger for AI agents."
authors = ["suryanox"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cast", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
rich = "^13.0"
pydantic = "^2.0"
openai = "^2.0"
litellm = {version = "^1.82.5", optional = true}

[tool.poetry.extras]
litellm = ["litellm"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
cast = "cast.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"